11-Ingress-SSL/kube-manifests/03-Ingress-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  tls:
  - hosts:
    - ssldemo.apps.stacksimplifygmail.onmicrosoft.com
    secretName: tls-secret
  rules:
  - host: ssldemo.apps.stacksimplifygmail.onmicrosoft.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app1-nginx-clusterip-service
          servicePort: 80
